--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="283.0" prefWidth="464.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="323.0" prefWidth="686.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label prefHeight="41.0" prefWidth="220.0" text="Seller Registration">
          <font>
@@ -28,7 +28,10 @@
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
           <TableColumn fx:id="tableColumnName" prefWidth="100.0" text="Name" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="100.0" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="150.0" text="Email" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="100.0" text="Base Salary" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="100.0" text="Birth Date" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="62.0" />
             <TableColumn fx:id="tableColumnREMOVE" prefWidth="100.0" />
         </columns>
       </TableView>
